# mars-research-ai-os

./: .dockerignore  .gitignore  0001-Add-Phase-1-knowledge-engine-cited-RAG-search-over-M.patch  0002.patch  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
deploy/: cloud-run.ps1
docs/: ARCHITECTURE.md  AUDIT_MODEL.md  BOOTABLE_RUNTIME.md  BOOT_DEPLOYMENT.md  BRAND_IDENTITY.md  COMMUNICATIONS.md  CONTROL_TO_TWIN.md  DEGRADED_MOBILITY.md  DIGITAL_TWIN_ACCEPTANCE.md  KNOWLEDGE_ENGINE.md  KNOWLEDGE_PROVENANCE.md  MARS_PHYSICS_ENGINE.md  MISSION_MOTION_ADAPTER_POLICY.md  MISSION_MOTION_CONTROLLER_ADAPTER.md  ML_DATA_PIPELINE.md  NAVIGATION.md  NAVIGATION_ARCHITECTURE.md  NAVIGATION_AUDIT.md  NAVIGATION_EVENTS.md  NAVIGATION_EXECUTION.md  NAVIGATION_INTENTS.md  NAVIGATION_REVIEW.md  NAVIGATION_TWIN.md  PERSISTENT_STATE.md  PREDICTIVE_DIGITAL_TWIN.md  PROJECT_CHARTER.md  QUANTUM_INSPIRED_ENGINE.md  RECOVERY_ORCHESTRATION.md  RECOVERY_POLICY.md  RECOVERY_STATE_MACHINE.md  REPRODUCIBLE_IMAGE.md  ROADMAP.md  ROUTE_PLANNER.md  ROVER_HAL.md  SAFETY_MOTION_CONTROLLER.md  SECURE_UPDATE.md  SEGMENTATION.md  SIMULATION.md  TWIN_HISTORY.md  TWIN_SCHEMA_VERSIONING.md  (+3 more)
tests/: test_arxiv_connector.py  test_communications.py  test_config.py  test_control.py  test_degraded.py  test_digital_twin.py  test_hal.py  test_intelligence.py  test_kernel.py  test_knowledge.py  test_knowledge_answers.py  test_knowledge_evaluation.py  test_knowledge_ingestion.py  test_knowledge_models.py  test_knowledge_search.py  test_mars_physics.py  test_mission_api.py  test_mission_motion_adapter.py  test_mission_orchestrator.py  test_ml_pipeline.py  test_navigation.py  test_navigation_execution.py  test_ollama_embedding.py  test_recovery.py  test_runtime.py  test_simulation.py  (+2 more)
(+113 files in other folders)
