[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mars-research-ai-os"
version = "0.1.0"
description = "A trustworthy, modular AI operating system for Mars research."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mars Research AI OS contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]
simulation = [
  "numpy>=1.26,<3",
  "pybullet>=3.2.7",
]

[project.scripts]
mars-ai-os = "mars_ai_os.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mars_ai_os"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
